Logback 1.0.12 and necessary compatibility fixes.

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -24,7 +24,7 @@
 		<jacksonVersion>2.2.0</jacksonVersion>
 		<log4jVersion>1.2.17</log4jVersion>
 		<log4j2Version>2.0-beta4</log4j2Version>
-		<logbackVersion>1.0.11</logbackVersion>
+		<logbackVersion>1.0.12</logbackVersion>
 		<slf4jVersion>1.7.5</slf4jVersion>
 		<springVersion>3.2.2.RELEASE</springVersion>
 		<sulkyVersion><!-- SV -->0.9.16-SNAPSHOT</sulkyVersion>
@@ -182,6 +182,12 @@
 				<version>${lilithVersion}</version>
 			</dependency>
 			
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.logback.tools</artifactId>
+				<version>${lilithVersion}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.classic</artifactId>
