--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -208,6 +208,12 @@
 
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.logback.tools</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.log4j2.converter</artifactId>
 			<scope>compile</scope>
 		</dependency>
