--- a/build.gradle
+++ b/build.gradle
@@ -250,9 +250,13 @@ subprojects {
 	}
 	
     dependencies {
-        testCompile libraries.junit
-        testCompile libraries.'slf4j-api'
-        testRuntime libraries.'logback-classic'
+		groovy libraries.'groovy'
+		
+		testCompile libraries.'groovy'
+		testCompile libraries.'spock-core'
+		testCompile libraries.junit
+		testCompile libraries.'slf4j-api'
+		testRuntime libraries.'logback-classic'
     }
 
 	jar {
