--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -5,8 +5,9 @@ project.ext.versions = [
 'jackson':        '2.2.0',
 'log4j':          '1.2.17',
 'log4j2':         '2.0-beta4',
-'logback':        '1.0.11',
+'logback':        '1.0.12',
 'slf4j':          '1.7.5',
+'spock':          '0.7-groovy-2.0',
 'spring':         '3.2.2.RELEASE',
 'groovy':         '2.1.3',
 'sulky':          "${System.properties.'release' ? sulkyBaseVersion : sulkyBaseVersion+'-SNAPSHOT'}"
@@ -45,6 +46,7 @@ project.ext.libraries = [
 'rrd4j':                    'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.rrd4j:2.0.5',
 'servlet-api':              'javax.servlet:servlet-api:2.5',
 'slf4j-api':                "org.slf4j:slf4j-api:${versions.slf4j}",
+'spock-core':               "org.spockframework:spock-core:${versions.spock}",
 'spring-aop':               "org.springframework:spring-aop:${versions.spring}",
 'spring-beans':             "org.springframework:spring-beans:${versions.spring}",
 'spring-context':           "org.springframework:spring-context:${versions.spring}",
