--- a/projectDependencies.gradle
+++ b/projectDependencies.gradle
@@ -509,6 +509,7 @@ project(':lilith') {
 		compile libraries.'rrd4j'
 		compile libraries.'servlet-api'
 		compile libraries.'slf4j-api'
+		compile libraries.'substance'
 		compile libraries.'sulky-buffers'
 		compile libraries.'sulky-buffers-filtering'
 		compile libraries.'sulky-buffers-table'
