--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -44,7 +44,7 @@ project.ext.libraries = [
 'logback-core':             "ch.qos.logback:logback-core:${versions.logback}",
 'macify':                   'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.macify:1.4',
 'protobuf':                 'com.google.protobuf:protobuf-java:2.5.0',
-'rrd4j':                    'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.rrd4j:2.0.5',
+'rrd4j':                    'org.rrd4j:rrd4j:2.2',
 'servlet-api':              'javax.servlet:servlet-api:2.5',
 'slf4j-api':                "org.slf4j:slf4j-api:${versions.slf4j}",
 'spock-core':               "org.spockframework:spock-core:${versions.spock}",
