--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -20,7 +20,7 @@ project.ext.libraries = [
 'cglib-nodep':              'cglib:cglib-nodep:3.0',
 'commons-io':               'commons-io:commons-io:2.4',
 'commons-lang':             'org.apache.commons:commons-lang3:3.1',
-'flyingsaucer':             'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.flyingsaucer.core-renderer:8RC1',
+'flyingsaucer':             'org.xhtmlrenderer:flying-saucer-core:9.0.2',
 'glazedlists':              'net.java.dev.glazedlists:glazedlists_java15:1.9.0',
 'groovy':                   "org.codehaus.groovy:groovy:${versions.groovy}",
 'groovy-console':           "org.codehaus.groovy:groovy-console:${versions.groovy}",
