--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -28,7 +28,7 @@ project.ext.libraries = [
 'httpclient':               'org.apache.httpcomponents:httpclient:4.2.5',
 'httpcore':                 'org.apache.httpcomponents:httpcore:4.2.4',
 'jcl-over-slf4j':           "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
-'jgroups-all':              'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jgroups-all:2.8.0.CR3',
+//'jgroups':                  'org.jgroups:jgroups:3.3.3.Final',
 'jmdns':                    'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jmdns:3.0',
 'jackson-databind':         "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
 'jcommander':               'com.beust:jcommander:1.30',
