--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -42,7 +42,7 @@ project.ext.libraries = [
 'logback-access':           "ch.qos.logback:logback-access:${versions.logback}",
 'logback-classic':          "ch.qos.logback:logback-classic:${versions.logback}",
 'logback-core':             "ch.qos.logback:logback-core:${versions.logback}",
-'macify':                   'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.macify:1.4',
+'macify':                   'org.simplericity.macify:macify:1.6',
 'protobuf':                 'com.google.protobuf:protobuf-java:2.5.0',
 'rrd4j':                    'org.rrd4j:rrd4j:2.2',
 'servlet-api':              'javax.servlet:servlet-api:2.5',
