--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ buildscript {
 		}
 		mavenCentral()
 		mavenLocal()
+		maven {
+			// workaround for http://issues.gradle.org/browse/GRADLE-784
+			// propdep => provided, optional
+			url 'http://repo.springsource.org/plugins-release'
+		}
 	}
 
 	dependencies {
@@ -32,6 +37,9 @@ buildscript {
 		classpath "de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}"
 		classpath 'de.huxhorn.gradle:de.huxhorn.gradle.git-state-plugin:0.0.2'
 		classpath 'com.github.ben-manes:gradle-versions-plugin:0.4'
+		// workaround for http://issues.gradle.org/browse/GRADLE-784
+		// propdep => provided, optional
+		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.4' 
 	}
 }
 
