--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ compareGradleBuilds {
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '1.8'
+	gradleVersion = '1.9-rc-3'
 }
 
 task javadoc(type: Javadoc) {
