--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ compareGradleBuilds {
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '1.10-rc-2'
+	gradleVersion = '1.10'
 }
 
 task javadoc(type: Javadoc) {
