--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -4,7 +4,7 @@ project.ext.versions = [
 'aspectj':        '1.7.4',
 'jackson':        '2.3.1',
 'log4j':          '1.2.17',
-'log4j2':         '2.0-beta9',
+'log4j2':         '2.0-beta9', // '2.0-rc1' is broken. https://issues.apache.org/jira/browse/LOG4J2-542
 'logback':        '1.1.1',
 'slf4j':          '1.7.6',
 'spock':          '0.7-groovy-2.0',
