--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -46,7 +46,7 @@ project.ext.libraries = [
 'macify':                   'org.simplericity.macify:macify:1.6',
 'protobuf':                 'com.google.protobuf:protobuf-java:2.5.0',
 'rrd4j':                    'org.rrd4j:rrd4j:2.2',
-'servlet-api':              'javax.servlet:javax.servlet-api:3.1.0',
+'servlet-api':              'javax.servlet:javax.servlet-api:3.0.1', // 3.1.0 requires Java 7
 'slf4j-api':                "org.slf4j:slf4j-api:${versions.slf4j}",
 'spock-core':               "org.spockframework:spock-core:${versions.spock}",
 'spring-aop':               "org.springframework:spring-aop:${versions.spring}",
