--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jdk:
   - openjdk6
 
 before_install: 
-  - git clone git@github.com:huxi/sulky.git ~/builds/sulky 
+  - git clone https://github.com/huxi/sulky.git ~/builds/sulky 
   - pushd ~/builds/sulky 
   - ./gradlew install 
   - popd 
