--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -3,6 +3,8 @@ project.ext.sulkyBaseVersion = '0.9.18'
 project.ext.versions = [
 'aspectj':        '1.8.0',
 'groovy':         '2.3.2',
+'httpClient':     '4.3.4',
+'httpCore':       '4.3.2',
 'jackson':        '2.3.3',
 'log4j':          '1.2.17',
 'log4j2':         '2.0-beta9', // '2.0-rc1' is broken. https://issues.apache.org/jira/browse/LOG4J2-542
@@ -25,8 +27,8 @@ project.ext.libraries = [
 'groovy':                   "org.codehaus.groovy:groovy:${versions.groovy}",
 'groovy-console':           "org.codehaus.groovy:groovy-console:${versions.groovy}",
 'groovy-xml':               "org.codehaus.groovy:groovy-xml:${versions.groovy}",
-'httpclient':               'org.apache.httpcomponents:httpclient:4.3.3',
-'httpcore':                 'org.apache.httpcomponents:httpcore:4.3.2',
+'httpclient':               "org.apache.httpcomponents:httpclient:${versions.httpClient}",
+'httpcore':                 "org.apache.httpcomponents:httpcore:${versions.httpCore}",
 'jcl-over-slf4j':           "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
 //'jgroups':                  'org.jgroups:jgroups:3.3.3.Final',
 'jmdns':                    'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jmdns:3.0',
