--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -7,7 +7,7 @@ project.ext.versions = [
 'httpCore':       '4.3.2',
 'jackson':        '2.4.1',
 'log4j':          '1.2.17',
-'log4j2':         '2.0-beta9', // '2.0-rc1' is broken. https://issues.apache.org/jira/browse/LOG4J2-542
+'log4j2':         '2.0-rc2',
 'logback':        '1.1.2',
 'slf4j':          '1.7.7',
 'spock':          '0.7-groovy-2.0',
