--- a/sandbox/log4j2-sandbox/gradle/wrapper/gradle-wrapper.properties
+++ b/sandbox/log4j2-sandbox/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Apr 05 15:40:39 CEST 2013
+#Wed Jun 25 17:12:00 CEST 2014
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-1.12-bin.zip
