--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ buildscript {
 		// workaround for http://issues.gradle.org/browse/GRADLE-784
 		// propdep => provided, optional
 		// http://repo.spring.io/plugins-release/org/springframework/build/gradle/propdeps-plugin/
-		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7-SNAPSHOT' 
+		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7' 
 	}
 }
 
