--- a/projectDependencies.gradle
+++ b/projectDependencies.gradle
@@ -520,6 +520,7 @@ project(':lilith') {
 		compile libraries.'sulky-sounds-impl-jlayer'
 		compile libraries.'sulky-swing'
 		compile libraries.'sulky-tasks'
+		compile libraries.'thymeleaf'
 		compile project(':jul-slf4j-handler')
 		compile project(':jul-xml')
 		compile project(':jul-xml-import')
