--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -23,6 +23,7 @@ project.ext.libraries = [
 'cglib-nodep':              'cglib:cglib-nodep:3.0',
 'commons-io':               'commons-io:commons-io:2.4',
 'commons-lang':             'org.apache.commons:commons-lang3:3.3.2',
+//'disruptor':                'com.lmax:disruptor:3.3.0',
 'flyingsaucer':             'org.xhtmlrenderer:flying-saucer-core:9.0.4',
 'glazedlists':              'net.java.dev.glazedlists:glazedlists_java15:1.9.0',
 'groovy':                   "org.codehaus.groovy:groovy:${versions.groovy}",
