--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -5,7 +5,8 @@ project.ext.versions = [
 'groovy':         '2.3.7',
 'httpClient':     '4.3.5',
 'httpCore':       '4.3.2',
-'jackson':        '2.4.2',
+'jackson':        '2.4.3',
+'jacksonModule':  '2.4.3',
 'log4j':          '1.2.17',
 'log4j2':         '2.0.2',
 'logback':        '1.1.2',
@@ -34,7 +35,7 @@ project.ext.libraries = [
 'jcl-over-slf4j':           "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
 //'jgroups':                  'org.jgroups:jgroups:3.3.3.Final',
 'jmdns':                    'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jmdns:3.0',
-'jackson-afterburner':      "com.fasterxml.jackson.module:jackson-module-afterburner:${versions.jackson}",
+'jackson-afterburner':      "com.fasterxml.jackson.module:jackson-module-afterburner:${versions.jacksonModule}",
 'jackson-databind':         "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
 'jcommander':               'com.beust:jcommander:1.35',
 'jgoodies-looks':           'com.jgoodies:jgoodies-looks:2.5.3',
