--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ import de.huxhorn.sulky.plist.*
 import org.gradle.plugins.signing.Sign
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '2.1'
+	gradleVersion = '2.2-rc-1'
 }
 
 buildscript {
