--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Oct 20 20:01:42 CEST 2014
+#Tue Nov 04 15:40:14 CET 2014
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.2-rc-1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.2-rc-2-bin.zip
