Disable doclint for protobuf.

--- a/build.gradle
+++ b/build.gradle
@@ -60,10 +60,16 @@ buildscript {
 	}
 }
 
-task javadoc(type: Javadoc) {
+task javadocAll(type: Javadoc) {
 	destinationDir = file("$buildDir/javadoc")
 	source = files { subprojects.collect { it.sourceSets.main.java } }
 	classpath = files { subprojects.collect { it.sourceSets.main.compileClasspath } }
+	// disable doclint for protobuf
+	// http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html
+	// https://github.com/google/protobuf/issues/304
+	if (JavaVersion.current().isJava8Compatible()) {
+		options.addStringOption('Xdoclint:none', '-quiet')
+	}
 }
 
 task sourceZip(type: Zip) {
@@ -73,7 +79,7 @@ task sourceZip(type: Zip) {
 
 task javadocZip(type: Zip) {
 	classifier = 'javadoc'
-	from javadoc.outputs.files
+	from javadocAll.outputs.files
 }
 
 signing {
