Added error dialog if Java < 1.8.0_45

--- a/build.gradle
+++ b/build.gradle
@@ -387,7 +387,8 @@ project(':lilith') {
 		processResources.dependsOn checkGitState
 	}
 	
-	def theMainClassName = 'de.huxhorn.lilith.Lilith'
+	//def theMainClassName = 'de.huxhorn.lilith.Lilith'
+	def theMainClassName = 'de.huxhorn.sulky.version.Main'
 	
 	mainClassName = theMainClassName
 
