--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,6 @@
 apply from: 'dependencyDefinitions.gradle'
 apply from: 'projectDependencies.gradle'
 
-apply plugin: 'versions'
-apply plugin: 'base'
-apply plugin: 'signing'
-apply plugin: 'com.github.kt3k.coveralls' // see https://github.com/kt3k/coveralls-gradle-plugin
-
 import org.apache.tools.ant.filters.FixCrLfFilter
 import de.huxhorn.sulky.plist.*
 import org.gradle.plugins.signing.Sign
@@ -68,7 +63,7 @@ buildscript {
 		classpath 'org.apache.maven.wagon:wagon-webdav-jackrabbit:1.0-beta-6'
 		classpath "de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}"
 		classpath 'de.huxhorn.gradle:de.huxhorn.gradle.git-state-plugin:0.0.2'
-		classpath 'com.github.ben-manes:gradle-versions-plugin:0.4'
+		classpath 'com.github.ben-manes:gradle-versions-plugin:0.9'
 		// workaround for http://issues.gradle.org/browse/GRADLE-784
 		// propdep => provided, optional
 		// http://repo.spring.io/plugins-release/org/springframework/build/gradle/propdeps-plugin/
@@ -78,6 +73,11 @@ buildscript {
 		classpath 'edu.sc.seis.gradle:macappbundle:2.1.0'
 	}
 }
+
+apply plugin: 'com.github.ben-manes.versions'
+apply plugin: 'base'
+apply plugin: 'signing'
+apply plugin: 'com.github.kt3k.coveralls' // see https://github.com/kt3k/coveralls-gradle-plugin
 
 task javadocAll(type: Javadoc) {
 	destinationDir = file("$buildDir/javadoc")
